--- a/cicd/job_templates.yml
+++ b/cicd/job_templates.yml
@@ -60,7 +60,7 @@
     script:
         - cd infra
         - tofu init $TF_BACKEND_CONFIG
-        - tofu apply "artifacts/${GITLAB_ENV}.tfplan"
+        - tofu apply "../artifacts/${GITLAB_ENV}.tfplan"
 
 #TODO
 .db_setup_template:
